# agent-safety-audit-env

./: .dockerignore  .gitignore  Dockerfile  EVAL.md  LICENSE  README.md  __init__.py  baseline.py  bootcamp_transcript.txt  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tmp_evaluator_sim.py  tmp_stdout_proof.py  tmp_test_graders.py  train.py  train_gpu.py  ui.py  validate-submission.sh
sandbox/: __init__.py  executor.py
server/: adversarial.py  agent_safety_audit_environment.py  app.py  metrics.py
tasks/: easy_violations.json  generator.py  grey_area_violations.json  hard_violations.json  medium_violations.json  sandbox_violations.json
tests/: test_bulletproof.py  test_edge_cases.py  test_environment.py  test_v3_features.py  validator_gui.py  validator_replica.py
training/: __init__.py  colab_notebook.py  plot_reward_curve.py  safety_monitor_env.py  train.py  train_local.py
training_results/: policy_weights.npz  ppo_training_metrics.json  training_metrics.json
