[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-agent-safety-monitor"
version = "2.0.0"
description = "AI Agent Safety Monitor — OpenEnv RL environment for real-time monitoring of AI agent actions (allow/block/flag). 48 tasks, dense rewards, deterministic grading."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Neural Nomads"},
]

dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.1",
    # Baseline inference
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.28.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
server = "agent_safety_audit_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["agent_safety_audit_env", "agent_safety_audit_env.server"]
package-dir = { "agent_safety_audit_env" = ".", "agent_safety_audit_env.server" = "server" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
